fixed scrollbar for the new chrome update

--- a/src/sass/_scrollbar.scss
+++ b/src/sass/_scrollbar.scss
@@ -1,10 +1,5 @@
-* {
-  scrollbar-width: auto;
-  scrollbar-color: $green $green-light;
-}
-
 *::-webkit-scrollbar {
-  width: 8px;
+  width: 4px;
 }
 
 *::-webkit-scrollbar-track {
@@ -16,9 +11,12 @@
   border-radius: 0px;
   border: 0px solid $green-light;
 }
-.task-wrapper .content::-webkit-scrollbar {
+.task-wrapper *::-webkit-scrollbar {
   width: 2px;
 }
-.task-wrapper .content::-webkit-scrollbar-thumb {
-  background: linear-gradient(transparent, #ffffff70, transparent);
+.task-wrapper *::-webkit-scrollbar-thumb {
+  background: white !important;
+}
+.task-wrapper .task-content-wrapper{
+  padding : .3rem;
 }
